--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                     <h3 class="name">Know your skills</h3>
                     <p class="description">Each lab contains skill tree. After each lab you topup your personal skill tree. This tree is sharable with other people</p>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-mortar-board icon"></i>
+<!--                 <div class="col-sm-6 col-md-4 item"><i class="fa fa-mortar-board icon"></i>
                     <h3 class="name">Certificates and badges</h3>
                     <p class="description">Get completion certificates for courses, or badges for finishing journey or specific lab</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
